# cookiecutter-py

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .bumpversion.cfg  MANIFEST.in  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: cli.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
